Fixed issue where when screen size becomes large Add button covers the x in the suggestions and pendings

--- a/base/app/assets/stylesheets/social_stream/base/sidebar/_sidebar.css.sass
+++ b/base/app/assets/stylesheets/social_stream/base/sidebar/_sidebar.css.sass
@@ -24,6 +24,8 @@
 
       .add
         @include btn-add
+	clear: left
+	margin-left: 85px
          
 
     .see-more
